--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "Cody Van De Mark",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^4.5.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.20.1",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "cuba": "^0.2.0"
   }
 }
